[tool.poetry]
name = "jaglar"
version = "0.1.0"
description = ""
authors = ["Abhinav Tushar <abhinav@lepisma.xyz>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.2.1"
xmljson = "^0.2.0"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
jaglar = "jaglar.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
