[tool.poetry]
name = "jaglar"
version = "0.1.0"
description = "Tool for project management backed by taskjuggler."
authors = ["Abhinav Tushar <abhinav@lepisma.xyz>"]
include = ["README.org"]
homepage = "https://github.com/Vernacular-ai/jaglar/"
repository = "https://github.com/Vernacular-ai/jaglar/"
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
xmljson = "^0.2.0"
docopt = "^0.6.2"
pandas = "^1.0.3"
xlrd = "^1.2.0"
pydash = "^4.7.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
jaglar = "jaglar.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
